<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/usuarioET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:text="Usuario"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contraseñaET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/constrase_a"
        app:layout_constraintStart_toStartOf="@+id/usuarioET"
        app:layout_constraintTop_toBottomOf="@+id/usuarioET"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/solicitudIngresobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#27715A"
        android:text="@string/ingresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/solicitudCuentabtn" />

    <Button
        android:id="@+id/solicitudCuentabtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="72dp"
        android:backgroundTint="#27715A"
        android:text="@string/solicitar_cuenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseñaET" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="156dp"
        android:layout_height="146dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="86dp"
        app:layout_constraintBottom_toTopOf="@+id/usuarioET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_logo2_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>